# openproject-rs

./: .dockerignore  Cargo.toml  Dockerfile  INTEGRATION_PLAN.md  PARITY_ROADMAP.md  README.md  SPRINT_REVIEW.md  docker-compose.yml  railway.toml
crates/op-api/: Cargo.toml
crates/op-api/src/: error.rs  extractors.rs  lib.rs  routes.rs
crates/op-api/src/handlers/: activities.rs  attachments.rs  categories.rs  journals.rs  memberships.rs  mod.rs  priorities.rs  projects.rs  queries.rs  relations.rs  roles.rs  statuses.rs  time_entries.rs  types.rs  users.rs  versions.rs  watchers.rs  work_packages.rs
crates/op-api/src/representers/: hal.rs  mod.rs  project.rs  query.rs  user.rs  work_package.rs
crates/op-attachments/: Cargo.toml
crates/op-attachments/src/: lib.rs  model.rs  service.rs  storage.rs
crates/op-auth/: Cargo.toml
crates/op-auth/src/: api_key.rs  jwt.rs  lib.rs  middleware.rs  permissions.rs  session.rs
crates/op-cli/: Cargo.toml
crates/op-cli/src/: lib.rs
crates/op-contracts/: Cargo.toml
crates/op-contracts/src/: base.rs  lib.rs
crates/op-contracts/src/projects/: base.rs  create.rs  delete.rs  mod.rs  update.rs
crates/op-contracts/src/users/: base.rs  create.rs  delete.rs  mod.rs  update.rs
crates/op-contracts/src/work_packages/: base.rs  create.rs  delete.rs  mod.rs  update.rs
crates/op-core/: Cargo.toml
crates/op-core/src/: config.rs  error.rs  lib.rs  pagination.rs  result.rs  traits.rs  types.rs
crates/op-db/: Cargo.toml
crates/op-db/src/: activities.rs  attachments.rs  categories.rs  journals.rs  lib.rs  members.rs  pool.rs  priorities.rs  projects.rs  queries.rs  query_executor.rs  relations.rs  repository.rs  roles.rs  statuses.rs  time_entries.rs  types.rs  users.rs  versions.rs  watchers.rs  work_packages.rs
crates/op-journals/: Cargo.toml
crates/op-journals/src/: journal.rs  journal_data.rs  journal_service.rs  lib.rs
crates/op-models/: Cargo.toml
crates/op-models/src/: lib.rs  member.rs  priority.rs  role.rs  status.rs  type_def.rs  user.rs  version.rs  work_package.rs
crates/op-models/src/project/: mod.rs  model.rs
crates/op-models/src/user/: model.rs
crates/op-models/src/work_package/: model.rs
crates/op-notifications/: Cargo.toml
crates/op-notifications/src/: channels.rs  email.rs  jobs.rs  lib.rs  notification.rs  service.rs
crates/op-projects/: Cargo.toml
crates/op-projects/src/: lib.rs
crates/op-queries/: Cargo.toml
crates/op-queries/src/: builder.rs  columns.rs  filters.rs  lib.rs  query.rs  sorts.rs
crates/op-server/: Cargo.toml
crates/op-server/src/: health.rs  main.rs  metrics.rs
crates/op-services/: Cargo.toml
crates/op-services/src/: base.rs  lib.rs  result.rs
crates/op-services/src/projects/: create.rs  delete.rs  mod.rs  set_attributes.rs  update.rs
crates/op-services/src/users/: create.rs  delete.rs  mod.rs  set_attributes.rs  update.rs
crates/op-services/src/work_packages/: create.rs  delete.rs  mod.rs  set_attributes.rs  update.rs
crates/op-users/: Cargo.toml
crates/op-users/src/: lib.rs
crates/op-work-packages/: Cargo.toml
crates/op-work-packages/src/: lib.rs
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
tracker/: INVENTORY.md  README.md  progress.md
tracker/api/: README.md
tracker/contracts/: README.md
tracker/models/: README.md
tracker/services/: README.md
