[workspace]
resolver = "2"
members = [
    "crates/op-core",
    "crates/op-models",
    "crates/op-contracts",
    "crates/op-services",
    "crates/op-api",
    "crates/op-db",
    "crates/op-auth",
    "crates/op-journals",
    "crates/op-notifications",
    "crates/op-attachments",
    "crates/op-work-packages",
    "crates/op-projects",
    "crates/op-users",
    "crates/op-queries",
    "crates/op-cli",
    "crates/op-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OpenProject RS Contributors"]
license = "GPL-3.0"
repository = "https://github.com/example/openproject-rs"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
hyper = { version = "1.1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Validation
validator = { version = "0.16", features = ["derive"] }
garde = { version = "0.18", features = ["derive"] }

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"
oauth2 = "4.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time & dates
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# UUIDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Internationalization
rust-i18n = "3.0"
fluent = "0.16"

# File handling
tokio-util = { version = "0.7", features = ["io"] }
mime = "0.3"
mime_guess = "2.0"

# Testing
mockall = "0.12"
fake = { version = "2.9", features = ["derive", "chrono"] }

# Other utilities
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "5.5"
regex = "1.10"
url = "2.5"
