[package]
name = "op-attachments"
version.workspace = true
edition.workspace = true
description = "File attachment handling for OpenProject RS"

[dependencies]
op-core = { path = "../op-core" }
op-models = { path = "../op-models" }

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
mime_guess = "2.0"
bytes = "1.0"
