[package]
name = "op-auth"
version.workspace = true
edition.workspace = true
description = "Authentication and authorization for OpenProject RS"

[dependencies]
op-core = { path = "../op-core" }
op-models = { path = "../op-models" }

axum.workspace = true
tokio.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
oauth2.workspace = true
serde.workspace = true
chrono.workspace = true
tracing.workspace = true
async-trait.workspace = true
thiserror.workspace = true
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.9"
base64 = "0.22"
