[package]
name = "op-core"
version.workspace = true
edition.workspace = true
description = "Core types, traits, and utilities for OpenProject RS"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
async-trait.workspace = true
validator.workspace = true
once_cell.workspace = true
