[package]
name = "op-journals"
version.workspace = true
edition.workspace = true
description = "Journal/audit logging for OpenProject RS"

[dependencies]
op-core = { path = "../op-core" }
op-models = { path = "../op-models" }

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sqlx.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
