[package]
name = "op-server"
version.workspace = true
edition.workspace = true
description = "HTTP server binary for OpenProject RS"

[[bin]]
name = "openproject-server"
path = "src/main.rs"

[dependencies]
op-core = { path = "../op-core" }
op-api = { path = "../op-api" }
op-db = { path = "../op-db" }
op-auth = { path = "../op-auth" }

axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
dotenvy.workspace = true
