[package]
name = "op-services"
version.workspace = true
edition.workspace = true
description = "Business logic services for OpenProject RS"

[dependencies]
op-core = { path = "../op-core" }
op-models = { path = "../op-models" }
op-contracts = { path = "../op-contracts" }
op-db = { path = "../op-db" }

tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
